--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import './base/settings';
+@import './base/base';
 @import './components/note';
-@import './components/base';
+@import './components/mainPage'
 
