--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,14 @@
 h1{
     color: blue;
 }
+
+ul {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: $m-size;
+}
+
+li {
+    text-decoration: none;
+}
