--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
 @import './components/note';
-@import './components/mainPage'
+@import './components/mainPage';
+@import './components/header';
 
