--- a/src/styles/components/_manage.scss
+++ b/src/styles/components/_manage.scss
@@ -1,6 +1,6 @@
-.mainPage {
+.manage {
   display: flex;
   flex-direction: row;
   margin-top: $m-size;
-  border: 1px solid black;
+  text-align: center;
 }
