revised selected items

--- a/src/styles/components/_mainPage.scss
+++ b/src/styles/components/_mainPage.scss
@@ -2,5 +2,7 @@
   display: flex;
   flex-direction: row;
   margin-top: $m-size;
-  border: 1px solid black;
+  border: 1px solid #55c57a;
+  border-radius: 30px;
+  padding: 1.7rem;
 }
