--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,14 +1,50 @@
-h1{
-    color: blue;
+:root {
+  --section-rotate: 9vw;
+}
+
+::-moz-selection {
+  background-color: #55c57a;
+  color: #fff;
+}
+
+::selection {
+  background-color: #55c57a;
+  color: #fff;
+}
+
+html {
+  font-size: 62.5%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  line-height: 1.6;
+  font-weight: 300;
+  font-family: 'Lato', sans-serif;
+  color: #777;
+  padding: 3rem;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+h1 {
+  color: blue;
 }
 
 ul {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: $m-size;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: $m-size;
 }
 
 li {
-    text-decoration: none;
+  text-decoration: none;
 }
