--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -14,6 +14,10 @@ button {
   border: none;
 }
 
+button:disabled {
+  background-color: rgb(170, 166, 166);
+}
+
 button:hover {
   -webkit-transform: translateY(-3px);
   transform: translateY(-3px);
