--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -89,9 +89,11 @@ button:active {
 .btn--filtered {
   font-size: 0.7rem;
   padding: 0.5rem 1rem;
-  background-color: rgb(33, 156, 119);
+  background-color: rgb(228, 29, 29);
   color: white;
 }
 .btn--notFiltered {
-  background-color: rgb(156, 103, 33);
+  font-size: 0.7rem;
+  padding: 0.5rem 1rem;
+  background-color: rgb(31, 140, 242);
 }
