--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @import './base/settings';
 @import './base/base';
 @import './components/note';
-@import './components/mainPage';
+@import './components/dashboard';
 @import './components/header';
 @import './components/manage';
 @import './components/button';
