--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,13 +1,17 @@
 .dashboard {
-  display: flex;
   flex-direction: row;
   margin-top: $m-size;
-  border: 1px solid #55c57a;
+  border: 1px solid #7dd56f;
   border-radius: 30px;
-  padding: 1.7rem;
+  padding: 1.2rem;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-column-gap: 1rem;
+  opacity: 0.9;
 }
 .dashboard__selections {
   padding: 0.7rem;
   background-color: gray;
   color: honeydew;
+  float: left;
 }
