--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 0.5rem;
-  @media (max-width: 62.5rem) {
+  margin-top: $s-size;
+  @media (max-width: 45rem) {
     grid-template-columns: repeat(2, 1fr);
-    margin-top: $l-size;
   }
 }
 
@@ -27,6 +27,8 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(white), to(#7dd56f));
+  background-image: linear-gradient(to right bottom, white, #7dd56f);
 }
 
 .card__header {
