--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,6 @@
 @import './components/manage';
 @import './components/button';
 @import './components/search';
+@import './components/myRouter';
+@import './components/appRouter';
+@import './components/mySelections';
