--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,9 +13,12 @@
 }
 
 html {
-  font-size: 50%;
+  font-size: 62.5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  @media (max-width: 45rem) {
+    font-size: 50%;
+  }
 }
 
 body {
