--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,17 +1,17 @@
 .dashboard {
   flex-direction: row;
-  margin-top: $m-size;
-  border: 1px solid #7dd56f;
+  margin: $m-size;
   border-radius: 30px;
-  padding: 1.2rem;
+  margin-top: 0;
+  padding: 0 1.2rem;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 1fr;
   grid-column-gap: 1rem;
   opacity: 0.9;
+  @media (min-width: $desktop-breakpoint) {
+    margin-top: $m-size;
+  }
 }
-.dashboard__selections {
-  padding: 0.7rem;
-  background-color: gray;
-  color: honeydew;
-  float: left;
+.dashboard--withMySelections {
+  grid-template-columns: 4fr;
 }
