--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -1,16 +1,19 @@
-.card-container {
+.activity-container {
   min-width: 13rem;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 0.5rem;
   margin-top: $s-size;
+  @media (max-width: 65rem) {
+    grid-template-columns: repeat(3, 1fr);
+  }
   @media (max-width: 45rem) {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-.card {
+.activity {
   border-radius: 3px;
   overflow: hidden;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
@@ -31,9 +34,9 @@
   background-image: linear-gradient(to right bottom, white, #7dd56f);
 }
 
-.card__header {
+.activity__header {
   position: relative;
 }
-.card__details {
+.activity__details {
   padding: 0.2rem 0.1rem;
 }
