--- a/src/styles/components/_mySelections.scss
+++ b/src/styles/components/_mySelections.scss
@@ -1,12 +1,11 @@
 .mySelections {
+  margin: 0;
   padding: 0.7rem;
   background-color: gray;
   color: honeydew;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 0.5rem;
-  margin-top: $s-size;
-  margin-left: 0;
 
   @media (max-width: 45rem) {
     grid-template-columns: repeat(2, 1fr);
@@ -14,9 +13,33 @@
 }
 
 .mySelections--withDashboard {
-  margin: 0 auto;
-  grid-template-columns: repeat(2, 1fr);
+  margin: 0;
+  padding: 0.7rem;
+  line-height: 1.2em;
+  background-color: gray;
+  color: honeydew;
+  display: table-cell;
+  overflow: hidden;
   @media (max-width: 45rem) {
-    grid-template-columns: repeat(1, 1fr);
+    margin-top: $s-size;
   }
+}
+
+.selection-card {
+  border-radius: 3px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  line-height: 1em;
 }
