--- a/src/styles/components/_appRouter.scss
+++ b/src/styles/components/_appRouter.scss
@@ -1,5 +1,6 @@
 .appRouter {
   border: 1px solid #7dd56f;
+  border-radius: 3px;
   margin: $s-size;
   padding: 0;
   @media (min-width: $desktop-breakpoint) {
