--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -14,7 +14,8 @@
 }
 
 .activity {
-  border-radius: 3px;
+  border: 1px solid #7dd56f;
+  border-radius: 5px;
   padding: $s-size;
   // overflow: hidden;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(122, 106, 106, 0.1);
@@ -31,8 +32,8 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(white), to(#7dd56f));
-  background-image: linear-gradient(to right bottom, white, #7dd56f);
+  // background-image: -webkit-gradient(linear, left top, right bottom, from(white), to(#7dd56f));
+  // background-image: linear-gradient(to right bottom, white, #7dd56f);
 }
 
 .activity__header {
