--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -72,7 +72,7 @@ button:active {
 // }
 
 .btn--login {
-  background-color: #777;
+  background-color: $dark-blue;
   color: white;
 }
 .btn--login::after {
