working on style-dashboard

--- a/src/styles/components/_mySelections.scss
+++ b/src/styles/components/_mySelections.scss
@@ -15,6 +15,7 @@
 .mySelections--withDashboard {
   margin: 0;
   padding: 0.7rem;
+  border-radius: 5px;
   line-height: 1.2em;
   background-color: $dark-blue;
   color: honeydew;
