--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,4 +1,69 @@
+.searchBar {
+  display: flex;
+  flex-direction: column;
+  opacity: 0.9;
+  // @media (max-width: $desktop-breakpoint) {
+  //   display: grid;
+  //   grid-template-columns: 2fr 1fr;
+  //   grid-column-gap: 1rem;
+  // }
+}
 .search {
   background-color: white;
   margin-bottom: $s-size;
+  display: flex;
+  flex-direction: column;
+  div {
+    display: flex;
+    flex-direction: row;
+  }
+  input,
+  select {
+    display: block;
+    font-family: inherit;
+    overflow: hidden;
+    font-size: 1rem;
+    color: inherit;
+    padding: 1rem 1.25rem;
+    border: none;
+    width: fit-content;
+    background-color: #fff;
+    background-color: #f2f2f2;
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    @media (max-width: $desktop-breakpoint) {
+      padding: 0.3rem 0.25rem;
+      max-width: 13rem;
+    }
+  }
+  @media (min-width: $desktop-breakpoint) {
+    flex-direction: row;
+  }
+}
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  label {
+    background-color: #55c57a;
+    color: white;
+    padding: 0.2rem;
+    border-radius: 3px;
+    width: 7rem;
+    text-align: center;
+    margin: 0.3rem;
+  }
+
+  @media (max-width: $desktop-breakpoint) {
+    label {
+      width: 3rem;
+    }
+  }
 }
