--- a/src/styles/components/_appRouter.scss
+++ b/src/styles/components/_appRouter.scss
@@ -1,9 +1,10 @@
 .appRouter {
   border: 1px solid #7dd56f;
+  min-height: 70rem;
   border-radius: 5px;
   margin: $s-size;
   padding: 0;
   @media (min-width: $desktop-breakpoint) {
-    padding-top: $m-size;
+    padding: $m-size;
   }
 }
