--- a/src/styles/components/_mySelections.scss
+++ b/src/styles/components/_mySelections.scss
@@ -17,7 +17,7 @@
   padding: 0.7rem;
   border-radius: 5px;
   line-height: 1.2em;
-  background-color: $dark-blue;
+  background-color: #777;
   color: honeydew;
   display: table-cell;
   overflow: hidden;
