--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './components/myRouter';
 @import './components/appRouter';
 @import './components/mySelections';
+@import './components/login';
