--- a/src/styles/components/_manage.scss
+++ b/src/styles/components/_manage.scss
@@ -1,6 +1,18 @@
 .manage {
-  display: flex;
-  flex-direction: row;
-  margin-top: $m-size;
-  text-align: center;
+  margin: $m-size;
+  border-radius: 30px;
+  margin-top: 0;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 1rem;
+  opacity: 0.9;
+}
+
+.manage-activities {
+  padding: $s-size 0;
+  display: table;
+}
+
+.manage-view {
+  padding: $s-size;
 }
