--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -2,32 +2,24 @@
   display: flex;
   flex-direction: column;
   opacity: 0.9;
-  // @media (max-width: $desktop-breakpoint) {
-  //   display: grid;
-  //   grid-template-columns: 2fr 1fr;
-  //   grid-column-gap: 1rem;
-  // }
 }
+
 .search {
   background-color: white;
   margin-bottom: $s-size;
   display: flex;
-  flex-direction: column;
-  div {
-    display: flex;
-    flex-direction: row;
-  }
+  flex-direction: row;
+
   input,
   select {
     display: block;
     font-family: inherit;
     overflow: hidden;
     font-size: 1rem;
-    color: inherit;
+    color: #777;
     padding: 1rem 1.25rem;
     border: none;
-    width: fit-content;
-    background-color: #fff;
+    max-width: fit-content;
     background-color: #f2f2f2;
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
@@ -38,11 +30,13 @@
     box-sizing: border-box;
     @media (max-width: $desktop-breakpoint) {
       padding: 0.3rem 0.25rem;
-      max-width: 13rem;
+      max-width: 7rem;
     }
   }
-  @media (min-width: $desktop-breakpoint) {
-    flex-direction: row;
+
+  select {
+    background-color: #55c57a;
+    color: #f2f2f2;
   }
 }
 
@@ -58,12 +52,19 @@
     border-radius: 3px;
     width: 7rem;
     text-align: center;
-    margin: 0.3rem;
+    margin: 0.3rem 0;
+  }
+
+  button {
+    border-radius: 3px;
   }
 
   @media (max-width: $desktop-breakpoint) {
     label {
       width: 3rem;
+    }
+    button {
+      padding: auto;
     }
   }
 }
