--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,14 +1,13 @@
 .dashboard {
-  margin: $m-size;
+  margin: $s-size;
   border-radius: 30px;
   margin-top: 0;
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-column-gap: 1rem;
+  grid-template-columns: 5fr 2fr;
+  grid-column-gap: 0.5rem;
   opacity: 0.9;
   @media (min-width: $desktop-breakpoint) {
-    margin-top: $m-size;
-    padding: 0 0.7rem;
+    margin: $m-size;
   }
 }
 .dashboard--withMySelections {
