--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
-  padding: $s-size;
-  margin-bottom: $m-size;
+  padding: $s-size 0;
+  margin: $m-size;
   @media (max-width: $desktop-breakpoint) {
-    margin-bottom: 0;
+    margin: $s-size;
   }
 }
 
@@ -10,10 +10,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #777;
+  border-radius: 5px;
+  color: white;
+  padding: none;
 
   button {
     border: none;
-    margin: auto;
     font-size: $s-size;
+    border-radius: 3px;
+  }
+
+  span {
+    color: #dde6e0;
+    font-weight: 500;
+    //font-family: Arial, Helvetica, sans-serif;
+    font-family: Brush Script MT, cursive;
+    font-style: italic;
   }
 }
