--- a/src/styles/components/_myRouter.scss
+++ b/src/styles/components/_myRouter.scss
@@ -11,14 +11,13 @@
     flex-direction: row;
     justify-content: space-between;
     margin: $m-size;
-    text-decoration: double;
-    list-style-type: disc;
+    list-style-type: none;
     padding: 0;
+
     li {
       a {
         color: #777;
         text-decoration: none;
-        text-align: end;
       }
 
       a.active {
@@ -36,6 +35,7 @@
     ul {
       display: table-cell;
       max-width: 15%;
+      list-style-type: disc;
       li {
         margin: 0;
         vertical-align: middle;
