alert added elh

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './components/appRouter';
 @import './components/mySelections';
 @import './components/login';
+@import './components/alert';
