--- a/src/styles/components/_appRouter.scss
+++ b/src/styles/components/_appRouter.scss
@@ -2,8 +2,8 @@
   border: 1px solid #7dd56f;
   min-height: 70rem;
   border-radius: 5px;
-  margin: $s-size;
-  padding: 0;
+  margin: 0 $s-size;
+  padding: $s-size;
   @media (min-width: $desktop-breakpoint) {
     padding: $m-size;
   }
