--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,19 +1,29 @@
 .header {
-  padding: $s-size 0;
-  margin: $m-size;
+  padding: 0;
+  margin: 0 $m-size;
+  margin-bottom: $m-size;
   @media (max-width: $desktop-breakpoint) {
-    margin: $s-size;
+    margin: 0 $s-size;
+    margin-bottom: $s-size;
   }
 }
 
 .header__container {
   display: flex;
+  height: 9rem;
   flex-direction: row;
   justify-content: space-between;
   background-color: #777;
   border-radius: 5px;
   color: white;
   padding: none;
+  align-items: center;
+  h1 {
+    margin: auto;
+    font-weight: 500;
+    color: white;
+    font-family: 'Lato', sans-serif;
+  }
 
   button {
     border: none;
@@ -24,8 +34,19 @@
   span {
     color: #dde6e0;
     font-weight: 500;
-    //font-family: Arial, Helvetica, sans-serif;
     font-family: Brush Script MT, cursive;
     font-style: italic;
+  }
+
+  @media (max-width: $desktop-breakpoint) {
+    height: 7rem;
+  }
+}
+
+.header__container--noUser {
+  justify-items: right;
+  h1 {
+    font-weight: 100;
+    font-family: Brush Script MT, cursive;
   }
 }
