--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -52,18 +52,49 @@
     width: 7rem;
     text-align: center;
     margin: 0.3rem 0;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
   }
 
-  button {
-    border-radius: 3px;
+  .filter-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    button {
+      min-width: fit-content;
+    }
   }
 
   @media (max-width: $desktop-breakpoint) {
     label {
-      width: 3rem;
+      width: 4.5rem;
+      position: fixed;
+      top: 13%;
+      margin: 0;
+      left: 0%;
+      z-index: 9999;
+      opacity: 0.7;
     }
-    button {
-      padding: auto;
+    .filter-button {
+      display: none;
+    }
+  }
+}
+
+.filter:hover {
+  @media (max-width: $desktop-breakpoint) {
+    label {
+      width: 5rem;
+      opacity: 0.9;
+    }
+    .filter-button {
+      width: 25rem;
+      position: fixed;
+      top: 13%;
+      left: 11%;
+      z-index: 9999;
+      display: flex;
+      opacity: 0.9;
     }
   }
 }
