--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -2,23 +2,17 @@
   display: flex;
   flex-direction: column;
   margin-bottom: $s-size;
-
-  label {
-    background-color: #55c57a;
-    color: white;
-    padding: 0.2rem;
-    border-radius: 3px;
-    text-align: center;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
+  @media (max-width: $desktop-breakpoint) {
+    margin-bottom: 0.5rem;
   }
 }
 
 .search {
-  background-color: white;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-bottom: 0.3rem;
+  background-color: #f2f2f2;
   input,
   select {
     display: block;
@@ -29,12 +23,13 @@
     padding: 1rem 1.25rem;
     border: none;
     min-width: fit-content;
+    height: 3.9rem;
     background-color: #f2f2f2;
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
-    border-radius: 4px;
+    border-radius: 1px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     @media (max-width: $desktop-breakpoint) {
@@ -59,21 +54,21 @@
 .filter {
   display: flex;
   flex-direction: row;
-  align-items: center;
-
-  button,
-  label {
-    width: 5.5rem;
+  > * {
+    border: 1px solid #55c57a;
+    border-radius: 1px;
+    border-left: none;
+    min-width: fit-content;
     height: 2.5rem;
-    justify-content: center;
+    padding: 0 0.9rem;
   }
-
-  label {
-    background-color: #777;
+  button:first-child {
+    border-left: 1px solid #55c57a;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
   }
-  @media (min-width: $desktop-breakpoint) {
-    button {
-      min-width: fit-content;
-    }
+  button:last-child {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
   }
 }
