--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -8,17 +8,21 @@
 }
 
 .search {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  max-height: 3.9rem;
+  position: static;
   margin-bottom: 0.3rem;
   background-color: #f2f2f2;
-  input,
-  select {
+  overflow: hidden;
+
+  input {
     display: block;
     font-family: inherit;
     overflow: hidden;
     font-size: 1rem;
+    position: static;
     color: #777;
     padding: 1rem 1.25rem;
     border: none;
@@ -48,27 +52,28 @@
 
   @media (min-width: $desktop-breakpoint) {
     margin-bottom: $s-size;
+    max-height: 2.5rem;
   }
 }
 
 .filter {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid #55c57a;
+  border-radius: 3px;
   > * {
-    border: 1px solid #55c57a;
+    border: none;
     border-radius: 1px;
-    border-left: none;
     min-width: fit-content;
     height: 2.5rem;
     padding: 0 0.9rem;
   }
-  button:first-child {
-    border-left: 1px solid #55c57a;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-  }
-  button:last-child {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
+  select {
+    background-color: #55c57a;
+    color: #f2f2f2;
+    overflow: hidden;
+    font-size: 0.9rem;
+    padding: 0;
   }
 }
