--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -93,6 +93,10 @@ button:active {
   font-size: 0.7rem;
   padding: 0.5rem 1rem;
 }
+.btn--big {
+  font-size: 1.2rem;
+  padding: 1rem 2rem;
+}
 
 .btn:disabled {
   -webkit-transform: none;
