--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,7 +1,7 @@
 .searchBar {
   display: flex;
   flex-direction: column;
-  margin-bottom: $s-size;
+  margin-bottom: 0.5rem;
   @media (max-width: $desktop-breakpoint) {
     margin-bottom: 0.5rem;
   }
@@ -11,12 +11,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   width: 100%;
-  max-height: 3.9rem;
   position: static;
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.9rem;
   background-color: #f2f2f2;
+  max-height: 3.9rem;
   overflow: hidden;
-
   input {
     display: block;
     font-family: inherit;
@@ -26,8 +25,8 @@
     color: #777;
     padding: 1rem 1.25rem;
     border: none;
-    min-width: fit-content;
     height: 3.9rem;
+    min-width: fit-content;
     background-color: #f2f2f2;
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
@@ -44,14 +43,8 @@
     }
   }
 
-  select {
-    background-color: #55c57a;
-    color: #f2f2f2;
-    width: 5.5rem;
-  }
-
-  @media (min-width: $desktop-breakpoint) {
-    margin-bottom: $s-size;
+  @media (max-width: $desktop-breakpoint) {
+    margin-bottom: 0.5rem;
     max-height: 2.5rem;
   }
 }
