--- a/src/styles/components/_myRouter.scss
+++ b/src/styles/components/_myRouter.scss
@@ -23,6 +23,7 @@
       a.active {
         width: fit-content;
         padding: 3px;
+        border-radius: 3px;
       }
     }
   }
@@ -42,4 +43,27 @@
       }
     }
   }
+}
+
+.myRouter-container {
+  max-width: 80%;
+  @media (max-width: $desktop-breakpoint) {
+    margin: $m-size;
+    max-width: 45rem;
+  }
+}
+.myArchive {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  @media (max-width: $desktop-breakpoint) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.5rem;
+  }
+}
+
+.myArchive__items {
+  margin: $s-size $m-size $m-size 0;
+  padding: 0.7rem;
+  border: 1px solid #55c57a;
+  border-radius: 3px;
 }
