--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -21,6 +21,10 @@
     box-sizing: border-box;
     margin-bottom: $m-size;
     height: fit-content;
+
+    min-width: fit-content;
+    max-width: 45rem;
+    padding: 0.7rem;
   }
 
   *::placeholder {
@@ -33,6 +37,13 @@
 .form__date {
   display: flex;
   flex-direction: row;
+  input {
+    width: 15rem;
+    min-width: 15rem;
+    max-width: 15rem;
+    margin-right: $s-size;
+    padding: 0.7rem;
+  }
 }
 
 .form__click {
@@ -53,4 +64,5 @@
   margin-bottom: $s-size;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(122, 106, 106, 0.1);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
+  max-width: 40rem;
 }
