--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -3,30 +3,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0.3rem;
-  input,
-  textArea {
-    display: block;
-    font-family: inherit;
-    overflow: hidden;
-    font-size: 1.5rem;
-    color: black;
-    border: none;
-    background-color: #f2f2f2;
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    border-radius: 4px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin-bottom: $m-size;
-    height: fit-content;
-
-    min-width: fit-content;
-    max-width: 45rem;
-    padding: 0.7rem;
-  }
-
   *::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #777;
@@ -34,27 +10,47 @@
   }
 }
 
+.form__input {
+  display: block;
+  font-family: inherit;
+  overflow: hidden;
+  font-size: 1.5rem;
+  color: black;
+  border: none;
+  background-color: #f2f2f2;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-bottom: $m-size;
+  height: fit-content;
+  min-width: fit-content;
+  max-width: 45rem;
+  padding: 0.7rem;
+}
+
 .form__date {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  max-width: fit-content;
+
+  > .react-datepicker__tab-loop {
+    display: grid;
+    grid-template-columns: auto;
+  }
   input {
-    width: 15rem;
-    min-width: 15rem;
-    max-width: 15rem;
-    margin-right: $s-size;
-    padding: 0.7rem;
+    @extend .form__input;
+    min-width: 5rem;
+    width: 11rem;
+    display: block;
+    position: static;
   }
 }
 
-.form__click {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  > * {
-    margin-right: $s-size;
-    justify-content: center;
-  }
-}
 .form__selections {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -62,7 +58,30 @@
   border-radius: 3px;
   padding: $s-size;
   margin-bottom: $s-size;
-  -webkit-box-shadow: 0 1.5rem 4rem rgba(122, 106, 106, 0.1);
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
-  max-width: 40rem;
+  max-width: 45rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: white;
+  border: none;
+  background-color: $dark-blue;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  .form__selections__input {
+    max-width: $l-size;
+    border-radius: 3px;
+  }
+}
+
+.form__click {
+  display: grid;
+  grid-template-columns: 1.7fr 0.7fr 1fr;
+  align-items: center;
+  height: auto;
+  > * {
+    padding: 0.3rem;
+    margin-bottom: 0.3rem;
+    font-size: 1.1rem;
+    margin-right: $s-size;
+    justify-content: center;
+  }
 }
