style on my activties

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,9 @@
 //color
 $dark-grey: #333333;
-$grey: #666;
+$grey: #777;
 $off-white: #f7f7f7;
 $blue: #1c88bf;
+$green: #55c57a;
 $dark-blue: #364051;
 $orange: rgb(255, 115, 0);
 //font-size
