--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -15,6 +15,8 @@
 html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
+  max-width: 110rem;
+  margin: auto;
   box-sizing: border-box;
   @media (max-width: 45rem) {
     font-size: 50%;
