--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -15,7 +15,7 @@
   font-family: inherit;
   overflow: hidden;
   font-size: 1.5rem;
-  color: black;
+  color: $dark-blue;
   border: none;
   background-color: #f2f2f2;
   border-top: 3px solid transparent;
@@ -37,6 +37,8 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 0.5rem;
   max-width: fit-content;
+  max-height: 5rem;
+  overflow: hidden;
 
   > .react-datepicker__tab-loop {
     display: grid;
@@ -69,6 +71,7 @@
   .form__selections__input {
     max-width: $l-size;
     border-radius: 3px;
+    border: none;
   }
 }
 
