--- a/src/styles/components/_myRouter.scss
+++ b/src/styles/components/_myRouter.scss
@@ -51,24 +51,8 @@
     margin-bottom: $s-size;
   }
   @media (max-width: $desktop-breakpoint) {
-    margin: $m-size;
+    margin: $s-size;
     max-width: 45rem;
-  }
-}
-.mySelection-container {
-  display: grid;
-  h2 {
-    margin-left: $s-size;
-  }
-  > * {
-    margin-bottom: $s-size;
-    font-family: 'Lato', sans-serif;
-  }
-
-  @media (max-width: $desktop-breakpoint) {
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
   }
 }
 
