--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -20,7 +20,7 @@
     display: block;
     font-family: inherit;
     overflow: hidden;
-    font-size: 1rem;
+    font-size: 1.4rem;
     position: static;
     color: #777;
     padding: 1rem 1.25rem;
@@ -40,6 +40,7 @@
       min-width: 0;
       width: 7.5rem;
       height: 2.5rem;
+      font-size: 1.2rem;
     }
   }
 
@@ -61,12 +62,14 @@
     min-width: fit-content;
     height: 2.5rem;
     padding: 0 0.9rem;
+    font-size: $s-size;
+    @media (max-width: $desktop-breakpoint) {
+      font-size: 0.7rem;
+    }
   }
   select {
     background-color: #55c57a;
     color: #f2f2f2;
-    overflow: hidden;
-    font-size: 0.9rem;
     padding: 0;
   }
 }
