--- a/src/styles/components/_manage.scss
+++ b/src/styles/components/_manage.scss
@@ -1,9 +1,17 @@
+.manage-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding-left: 0;
+  @media (max-width: $desktop-breakpoint) {
+    margin: $s-size;
+  }
+}
 .manage {
-  margin: $m-size;
+  margin: 0;
   border-radius: 30px;
-  margin-top: 0;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 5fr;
   grid-column-gap: 1rem;
   opacity: 0.9;
 }
@@ -15,4 +23,26 @@
 
 .manage-view {
   padding: $s-size;
+  margin-left: 15%;
+}
+
+.manage-header {
+  margin: 0;
+  span {
+    font-style: italic;
+  }
+}
+
+.manage-items {
+  #on-my-list {
+    background-color: aqua;
+    display: table-cell;
+    width: fit-content;
+    list-style-type: disc;
+    text-align: start;
+    li {
+      margin-left: $m-size;
+      vertical-align: middle;
+    }
+  }
 }
