--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -2,7 +2,7 @@
   min-width: 13rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 0.5rem;
+  gap: 0.5rem;
   @media (max-width: 65rem) {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -29,19 +29,18 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .activity__header {
-  position: relative;
-  > .activity__buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .activity__details {
   display: flex;
   padding: 0.2rem 0.1rem;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
