--- a/src/styles/components/_manage.scss
+++ b/src/styles/components/_manage.scss
@@ -7,42 +7,105 @@
     margin: $s-size;
   }
 }
-.manage {
-  margin: 0;
-  border-radius: 30px;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-column-gap: 1rem;
-  opacity: 0.9;
-}
-
-.manage-activities {
-  padding: $s-size 0;
-  display: table;
-}
-
-.manage-view {
-  padding: $s-size;
-  margin-left: 15%;
-}
 
 .manage-header {
   margin: 0;
   span {
     font-style: italic;
   }
+  @media (max-width: $desktop-breakpoint) {
+    margin: auto;
+  }
+}
+
+.manage {
+  margin: 0;
+  border-radius: 30px;
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  grid-column-gap: 1rem;
+  opacity: 0.9;
+}
+
+.manage-activities {
+  padding: $s-size 0;
+}
+
+.manage-view {
+  padding: 0.7rem $s-size;
+  label {
+    color: $green;
+    font-size: $m-size;
+    @media (max-width: $desktop-breakpoint) {
+      font-size: $s-size;
+    }
+  }
 }
 
 .manage-items {
   #on-my-list {
-    background-color: aqua;
     display: table-cell;
     width: fit-content;
-    list-style-type: disc;
+    list-style-type: none;
     text-align: start;
+    color: white;
+    * {
+      border-radius: 3px;
+    }
+
+    label {
+      padding: 0.3rem 0.1rem 0.3rem $s-size;
+      margin: $l-size 0;
+      color: $dark-blue;
+      span {
+        margin-left: 0.7rem;
+      }
+    }
+
+    label.active {
+      background-color: $dark-blue;
+      color: white;
+      -webkit-transform: translateX(+7px);
+      transform: translateX(+7px);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+
+    label:hover {
+      background-color: $dark-blue;
+      color: white;
+      -webkit-transform: translateX(+7px);
+      transform: translateX(+7px);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    }
     li {
-      margin-left: $m-size;
       vertical-align: middle;
+      color: $grey;
+      padding: 0 $s-size;
+      width: fit-content;
+
+      -webkit-transition: all 0.2s;
+      transition: all 0.2s;
+    }
+
+    li:last-child {
+      margin-bottom: 0.5rem;
+    }
+    li:active {
+      -webkit-transform: translateY(-1px);
+      transform: translateY(-1px);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+    li.active {
+      color: $dark-blue;
+      margin-left: $s-size;
+    }
+
+    li:hover {
+      color: white;
+      background-color: $grey;
     }
   }
 }
