--- a/src/styles/components/_manage.scss
+++ b/src/styles/components/_manage.scss
@@ -23,7 +23,7 @@
   border-radius: 30px;
   display: grid;
   grid-template-columns: 2fr 5fr;
-  grid-column-gap: 1rem;
+  grid-column-gap: 0.1rem;
   opacity: 0.9;
 }
 
@@ -49,26 +49,24 @@
     list-style-type: none;
     text-align: start;
     color: white;
+    padding: 0;
     * {
       border-radius: 3px;
     }
 
     label {
-      padding: 0.3rem 0.1rem 0.3rem $s-size;
+      padding: 0.3rem 0.1rem 0.3rem 0.5rem;
       margin: $l-size 0;
       color: $dark-blue;
+
       span {
-        margin-left: 0.7rem;
+        margin-left: 0.5rem;
       }
     }
 
     label.active {
       background-color: $dark-blue;
       color: white;
-      -webkit-transform: translateX(+7px);
-      transform: translateX(+7px);
-      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     }
 
     label:hover {
