--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -2,13 +2,13 @@
   border-radius: 30px;
   margin-top: 0;
   display: grid;
+  grid-template-columns: 4fr;
+}
+.dashboard--withMySelections {
   grid-template-columns: 5fr 2fr;
   grid-column-gap: 0.5rem;
   opacity: 0.9;
   @media (min-width: $desktop-breakpoint) {
-    margin: $m-size;
+    margin: $m-size 0;
   }
-}
-.dashboard--withMySelections {
-  grid-template-columns: 4fr;
 }
