--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 0;
-  margin: 0 $m-size;
+  margin: 0;
   margin-bottom: $m-size;
   @media (max-width: $desktop-breakpoint) {
     margin: 0;
