--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -8,6 +8,53 @@
   }
 }
 
+.modal--selection {
+  padding-top: 25px;
+  .selection-container {
+    margin: 0.3rem;
+    display: flex;
+    flex-direction: column;
+    .sub-select {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      border-bottom: 3px solid $green;
+
+      .sub-name {
+        border: 1px solid $green;
+        padding: $s-size 0;
+        border-radius: 3px;
+        margin: $s-size 0;
+        * {
+          float: left;
+          margin: 0 0.3rem;
+        }
+        input {
+          margin-top: 0.5rem;
+        }
+        @media (max-width: $desktop-breakpoint) {
+          font-size: 1.2rem;
+          input {
+            margin-top: 0;
+          }
+        }
+      }
+
+      @media (max-width: $desktop-breakpoint) {
+        grid-column-gap: 0.1rem;
+      }
+      .buttons-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+    }
+
+    .button-decision {
+      margin-top: $l-size;
+    }
+  }
+}
+
 .modal--name {
   margin: auto;
   display: flex;
